Bug 180849 Mail loss in import of NC4 mail when 0x5C(\) is used as 2nd byte of muti-byte character in folder name. r=jshin, sr=dougt